--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>husqvarna-motorcycles.com</title>
+    <title>Husqvarna-motorcycles.com</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="imagees/h777photo_2024-02-29_19-51-49.jpg">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,200,0,-25" />
@@ -57,9 +57,8 @@
 
                         </div>
                         <div class="slidebar3">
-
+                          
                         </div>
-
                  </div>
              </div>
             
