--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Husqvarna-motorcycles.com</title>
+    <!-- HTML Meta Tags -->
+<title>husqvarna-motorcycles.com</title>
+<meta name="description" content="">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://akhil-kumar-2001.github.io/husqvarna-clone/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="husqvarna-motorcycles.com">
+<meta property="og:description" content="">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/documents/9be0807f-c4d4-40b7-b145-5d7533e9b824.png?token=kJ7L19PE5JU_IomOYutW5dUD-CMkKan2EsRV2e1MxgI&height=606&width=1200&expires=33245547614">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="akhil-kumar-2001.github.io">
+<meta property="twitter:url" content="https://akhil-kumar-2001.github.io/husqvarna-clone/">
+<meta name="twitter:title" content="husqvarna-motorcycles.com">
+<meta name="twitter:description" content="">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/documents/9be0807f-c4d4-40b7-b145-5d7533e9b824.png?token=kJ7L19PE5JU_IomOYutW5dUD-CMkKan2EsRV2e1MxgI&height=606&width=1200&expires=33245547614">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="imagees/h777photo_2024-02-29_19-51-49.jpg">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,200,0,-25" />
